--- a/Ensemble_Learning.ipynb
+++ b/Ensemble_Learning.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMY4hsMISgfl1U+68PZ6QV4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Ramcharan1214/Ensemblelearning-algorithm/blob/main/Ensemble_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -580,7 +592,7 @@
         "id": "TK5tl4YhTsod",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 300
         },
         "outputId": "4fdafa35-c44d-442d-e173-31db4bcb831c"
       },
